# QT

Aeroport/: CMakeLists.txt  dbmanager.cpp  dbmanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  statsdialog.cpp  statsdialog.h  statsdialog.ui  Матрица Требований.xlsx
Diplom/Diplom/: CMakeLists.txt  config.ini
Diplom/Diplom/Database/: DatabaseManager.cpp  DatabaseManager.h
Diplom/Diplom/Indexer/: Indexer.cpp  Indexer.h  main.cpp
Diplom/Diplom/Searcher/: Searcher.cpp  Searcher.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson1/FearstProject/: CMakeLists.txt
Lesson10/PreTCPclient/: CMakeLists.txt  mainwindow.cpp  tcpclient.cpp
Lesson2/DataBase/: CMakeLists.txt  main.cpp
Lesson3/Designer/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson4/Widget/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Lesson5/Timer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Lesson6/PreConcurrent/: CMakeLists.txt  mainwindow.cpp
Lesson7/PreGraphic/: CMakeCache.txt  CMakeLists.txt  mainwindow.cpp  mainwindow.h
Lesson8/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  dbdata.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson9/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
